--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Don't version the node_modules, make sure to install with `npm install`
 node_modules
 
+# Don't version vendor stuff
+vendor
+
 # Don't version dist folder
 # dist/*
 # well, in an ideal world, you shouldn't version dist folder. But this isn't
