--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"gulp-svg-sprite": "^1",
 		"gulp-uglify": "^1",
 		"gulp-watch": "^4",
+		"browser-sync": "^2",
 		"html5shiv": "^3",
 		"normalize.css": "^3",
 		"postcss-cssnext": "^2"
