--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "growdigital/ysgoltrewen-wp",
+	"name": "growdigital/ysgoltrewen",
 	"description": "WordPress theme, based on Cornerstone",
 	"type": "wordpress-theme",
   "minimum-stability": "stable",
